--- a/app/views/bx_resources/index.html.erb
+++ b/app/views/bx_resources/index.html.erb
@@ -15,7 +15,7 @@
     <%= link_to category.name, project_bx_category_path(@project, category) %>
   </div>
   <div class="bx-resources">
-    <%= render :partial => "bx_resources/tree", :locals => { :resources => category.resources } %>
+    <%= render :partial => "bx_resources/tree", :locals => { :resources => category.all_resources } %>
   </div>
   <% end %>
 <% end %>
