Change bx_resource_nodes.path to bx_resource_nodes.default_path

--- a/app/views/bx_resources/show.html.erb
+++ b/app/views/bx_resources/show.html.erb
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <th><%= l("bx.label.resource.path") %> :</th>
-      <td><%= @resource.path %></td>
+      <td><%= @resource.default_path %></td>
     </tr>
     <tr>
       <th><%= l("bx.label.resource.route") %> :</th>
